<resources>
    <string name="app_name">mojiRecepti</string>
    <string name="nov_recept">Nov recept</string>
    <string name="drawerOpen">drawerOpen</string>
    <string name="drawerClose">drawerClose</string>
    <string name="search">Iskalnik</string>
    <string name="all_recipes">Vsi recepti</string>
    <string name="starters">Predjedi</string>
    <string name="main_dishes">Glavne jedi</string>
    <string name="deserts">Sladice</string>
    <string name="starter">Predjed</string>
    <string name="main_dish">Glavna jed</string>
    <string name="desert">Sladica</string>
    <string name="rest">Ostalo</string>
    <string name="recipe_name_hint">Vnesi ime recepta</string>
    <string name="choose_category">Izberi kategorijo</string>
    <string name="ingredients">Sestavine</string>
    <string name="ingredients_hint">Vnesi sestavino in količino</string>
    <string name="process">Postopek</string>
    <string name="process_hint">Tukaj vpiši postopek priprave jedi…</string>
    <string name="recipe_canceled">Dodajanje recepta preklicano</string>
    <string name="recipe_added">Recept uspešno dodan</string>
    <string name="warning_title">OPOZORILO!</string>
    <string name="delete_warning_text">Ali ste prepričani, da želite izbrisati recept?</string>
    <string name="yes">DA</string>
    <string name="no">NE</string>
    <string name="about_us_title">O Nas - kdo smo?</string>
    <string name="o_nas">O Nas - kdo smo?</string>
    <string name="naslov_recepta">Naslov recepta</string>
    <string name="o_nas_tekst">Aplikacija mojiRecepti je nastala v okviru laboratorijskih vaj pri predmetu Terminalske naprave in uporabniški vmesniki, ki se izvaja v 3. letniku študija multimedije na Fakulteti za elektrotehniko.</string>
    <string name="developers">Razvijalci</string>
    <string name="jaka">Jaka Bezovšek</string>
    <string name="matic">Matic Lulik</string>
    <string name="date">Ljubljana, 2020</string>
    <string name="insert_ingredient">Vnesite sestavino</string>
    <string name="insert_all_data">Prosimo vpišite vse podatke</string>
    <string name="edit_recipe">Uredi recept</string>
    <string name="recipe_updated">Recept uspešno posodobljen</string>
    <string name="recipe_not_updated">Recept ni bil posodobljen</string>
    <string name="fill_all_fields">Prosimo izpolnite vsa polja</string>
    <string name="recipe_list_empty">Nimate shranjenih receptov za izbrano kategorijo</string>

</resources>
