<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/vsiRecepti_menuItem"
            android:title="@string/all_recipes"

            />
        <item
            android:id="@+id/predjed_menuItem"
            android:title="@string/starters" />
        <item
            android:id="@+id/glavne_jedi_MenuItem"
            android:title="@string/main_dishes" />
        <item
            android:id="@+id/sladice_menuItem"
            android:title="@string/deserts" />
        <item
            android:id="@+id/ostalo_menuItem"
            android:title="@string/rest" />
        <item
            android:id="@+id/onas_menuItem"
            android:title="O nas"
            />
    </group>
</menu>