<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/ScrollView01"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    android:fadeScrollbars="false">
 <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >
    <TextView
        android:id="@+id/text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:textSize="30sp"
        android:textStyle="bold"
        android:text="@string/nov_recept"/>

    <EditText
        android:id="@+id/imeRecepta"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        android:layout_below="@id/dodajSliko"
        android:hint="@string/recipe_name_hint"
        android:padding="10dp"/>

    <ImageButton
        android:id="@+id/dodajSliko"
        android:layout_width="93dp"
        android:layout_height="97dp"
        android:layout_marginLeft="5dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginBottom="5dp"
        android:layout_alignParentRight="true"
        android:layout_marginStart="5dp"
        android:layout_marginEnd="10dp"
        android:layout_alignParentEnd="true" />

    <Button
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Dodaj sliko"
        android:textSize="12dp"
        android:layout_marginRight="10dp"
        android:layout_alignParentRight="true"
        android:layout_below="@id/dodajSliko"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="10dp" />

    <TextView
        android:id="@+id/izberi_kategorijo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/imeRecepta"
        android:text="@string/choose_category"
        android:layout_margin="10dp"
        android:textStyle="bold"
        android:textSize="17dp"/>

    <RadioGroup
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:id="@+id/radio_gumbi"
        android:layout_below="@id/izberi_kategorijo"
        android:orientation="horizontal"
        android:layout_marginBottom="20dp"
        android:layout_marginLeft="10dp">

        <RadioButton
            android:id="@+id/kategorijaPredjed"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/starter"
            android:textSize="15sp"
            android:layout_marginLeft="10dp"/>
        <RadioButton
            android:id="@+id/kategorijaGlavna"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/main_dish"
            android:textSize="15sp"
            android:layout_marginLeft="10dp"/>
        <RadioButton
            android:id="@+id/kategorijaSladica"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/desert"
            android:textSize="15sp"
            android:layout_marginLeft="10dp"/>
        <RadioButton
            android:id="@+id/kategorijaOstalo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/rest"
            android:layout_marginRight="10dp"
            android:textSize="15sp"
            />
  </RadioGroup>
    <TextView
        android:id="@+id/sestavine_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/radio_gumbi"
        android:layout_margin="5dp"
        android:textStyle="bold"
        android:textSize="17dp"
        android:text="@string/ingredients"/>

    <Button
        android:id="@+id/btnSestavine"
        android:layout_width="wrap_content"
        android:layout_height="36dp"
        android:layout_below="@id/sestavine_text"
        android:layout_toRightOf="@id/sestavina_add"
        android:text="Dodaj"
        android:textSize="10sp" />

    <EditText
        android:id="@+id/sestavina_add"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:layout_below="@id/sestavine_text"
        android:hint="@string/ingredients_hint"
        android:textSize="15sp"
        android:padding="10dp"
        android:maxLength="30"/>

     <ListView
         android:id="@+id/listView_lv"
         android:layout_width="match_parent"
         android:layout_height="100dp"
         android:layout_below="@id/sestavina_add"
         android:layout_marginLeft="10dp"
         android:layout_marginTop="-2dp"
         android:layout_marginRight="10dp"
         android:layout_marginBottom="20dp"
         android:background="@drawable/back"
         android:scrollbarSize="10dp" />

     <TextView
        android:id="@+id/postopek_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/listView_lv"
        android:layout_margin="10dp"
        android:textStyle="bold"
        android:textSize="17dp"
        android:text="@string/process"/>

   <EditText
       android:layout_width="match_parent"
       android:id="@+id/postopek_polje"
       android:layout_height="wrap_content"
       android:layout_below="@id/postopek_text"
       android:lines="5"
       android:background="@drawable/back"
       android:layout_marginLeft="10dp"
       android:layout_marginRight="10dp"
       android:layout_marginBottom="20dp"


        android:hint="@string/process_hint"
       />

    <Button
        android:id="@+id/shrani"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/postopek_polje"
        android:layout_marginLeft="10dp"
        android:text="Shrani recept" />

    <Button
        android:id="@+id/button3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Prekliči"
        android:layout_below="@id/postopek_polje"
        android:layout_toRightOf="@id/shrani"

        />

        </RelativeLayout>
</ScrollView>